--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express-session": "^1.17.1",
     "express-validator": "^5.3.1",
     "http-errors": "^1.6.3",
+    "js-beautify": "^1.11.0",
     "mongodb": "^3.5.7",
     "mongoose": "^5.9.16",
     "morgan": "^1.9.1",
