--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "debug": "~2.6.9",
     "ejs": "^3.1.3",
     "express": "~4.16.1",
+    "express-fileupload": "^1.1.7-alpha.3",
     "express-messages": "^1.0.1",
     "express-session": "^1.17.1",
     "express-validator": "^5.3.1",
