--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon app.js",
+    "start": "node app.js",
     "lint:ejs": "ejslint views/partials/message.ejs"
   },
   "author": "Kathrina Arrocha",
