--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "connect-multiparty": "^2.2.0",
     "cookie-parser": "^1.4.5",
     "debug": "~2.6.9",
+    "dotenv": "^8.2.0",
     "ejs": "^3.1.3",
     "express": "~4.16.1",
     "express-fileupload": "^1.1.7-alpha.3",
