--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "morgan": "^1.9.1",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
+    "pdfmake": "^0.1.66",
     "pug": "2.0.0-beta11"
   },
   "devDependencies": {
