--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"express": "~4.16.1",
 		"express-fileupload": "^1.1.7-alpha.3",
 		"express-messages": "^1.0.1",
+		"express-myconnection": "^1.0.4",
 		"express-session": "^1.17.1",
 		"express-validator": "^5.3.1",
 		"http-errors": "^1.6.3",
@@ -29,6 +30,7 @@
 		"mongodb": "^3.5.7",
 		"mongoose": "^5.9.16",
 		"morgan": "^1.9.1",
+		"mysql": "^2.18.1",
 		"passport": "^0.4.1",
 		"passport-local": "^1.0.0",
 		"pdfmake": "^0.1.66",
